--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Harvindsokhal.github.io/harvindsokhal-desktop",
+  "homepage": "http://harvindsokhal.com",
   "name": "new-portfolio",
   "version": "0.1.0",
   "private": true,
